--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,10 @@
 .App {
-  height: 100vh;
-  background-size: cover;
+  background-image: url("./portfolio-background.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
   background-repeat: no-repeat;
-  background-position: top center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-size: cover;
 }
 
 @media (min-width: 650px) {
@@ -18,14 +15,85 @@
   .App-content {
     align-items: flex-end;
     justify-content: center;
+    flex-shrink: initial;
   }
 }
 
+#headShot img {
+  z-index: 2;
+  height: 50rem;
+  float: right;
+  width: 82%;
+  flex-shrink: inherit;
+  padding-right: 9.75rem;
+}
+
 .App-content {
-  height: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 9.75rem;
+}
+
+#hero {
+  float: left;
+  z-index: 1;
+  height: 50rem;
+  width: 66%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 40px;
+  justify-content: space-between;
+}
+
+.hero-item {
+  font-size: 3rem;
+  align-self: center;
+  padding: 2rem;
+  padding-top: 0rem;
+}
+
+#top-intro {
+  font-size: 5rem;
+  padding: 2rem;
+  padding-top: 0rem;
+}
+
+.nav-item {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: xx-large;
+}
+
+.nav {
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.proj-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 9.75rem;
+}
+
+.projSection {
+  background-color: #a9c7b9;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+  flex-direction: row;
+  width: 100rem;
+  align-content: center;
+}
+
+.projSectionItem {
+  margin: 15px;
+}
+
+.footer {
+  background-color: #cfc1b3;
+  height: 70px;
 }
