--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 650px) {
@@ -19,45 +23,51 @@
   }
 }
 
-#headShot img {
-  z-index: 2;
-  height: 50rem;
-  float: right;
-  width: 82%;
-  flex-shrink: inherit;
-  padding-right: 9.75rem;
+.titleBar {
+  height: inherit;
 }
 
 .App-content {
-  height: 50%;
+  margin-top: 3rem;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 9.75rem;
+  align-items: stretch;
+  position: relative;
+}
+
+#headShot {
+  float: left;
+  width: 33%;
+  flex-shrink: inherit;
+  z-index: 1;
+  margin-right: 1%;
+  opacity: 1;
+  border-radius: 10px;
 }
 
 #hero {
-  float: left;
-  z-index: 1;
-  height: 50rem;
-  width: 66%;
   display: flex;
   flex-direction: column;
+  flex-shrink: inherit;
+  margin-left: 1%;
+  width: 50%;
+  background-color: lavender;
+  opacity: 0.8;
+  align-items: center;
   justify-content: space-between;
-}
-
-.hero-item {
-  font-size: 3rem;
-  align-self: center;
-  padding: 2rem;
-  padding-top: 0rem;
+  border-radius: 10px;
 }
 
 #top-intro {
   font-size: 5rem;
-  padding: 2rem;
-  padding-top: 0rem;
+  width: 100%;
+}
+
+.hero-item {
+  font-size: 3rem;
+  width: 100%;
 }
 
 .nav-item {
@@ -67,33 +77,43 @@
 }
 
 .nav {
-  width: 100%;
-  height: 8rem;
+  height: 2rem;
   display: flex;
   justify-content: flex-end;
 }
 
 .proj-container {
+  border-radius: 10px;
+
   display: flex;
   justify-content: center;
-  margin-top: 9.75rem;
+  margin-top: 7rem;
+  width: 83%;
+  flex-direction: column;
+  background-color: lavender;
+  opacity: 0.8;
+  margin-bottom: 7rem;
 }
 
 .projSection {
-  background-color: #a9c7b9;
+  border-radius: 10px;
+
   display: flex;
-  flex-wrap: wrap;
   margin-bottom: 50px;
   flex-direction: row;
-  width: 100rem;
-  align-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .projSectionItem {
-  margin: 15px;
+  background-color: #a9c7b9;
+  padding: 1rem;
+  margin: 2rem;
+  border-radius: 10px;
 }
 
 .footer {
   background-color: #cfc1b3;
   height: 70px;
+  width: inherit;
 }
